# wallet-sweeper-app

./: .env  .env.example  Procfile  README.md  ecosystem.config.js  nixpacks.toml  package-lock.json  package.json  railway.json
backend/: server.js  simple-server.js
backend/middleware/: rateLimiter.js
backend/routes/: verification.js
backend/services/: audit-logger.js  cache.js  nonce-manager.js  signature-service.js
frontend/: index.html  sweep.html
frontend/css/: dark-pino-styles.css
frontend/js/: app.js  deep-link-generator.js  personal-transfer.js  security-utils.js  transaction-executor.js  wallet-connector.js  wallet-sweeper.js
smart-contracts/programs/scheduled-transfer/: Cargo.toml
smart-contracts/programs/scheduled-transfer/src/: lib.rs
smart-contracts/programs/scheduled-transfer/tests/: integration.rs
tests/: security.test.js
